force-app/main/default/objects/serviceChargesCodeMapping__mdt/serviceChargesCodeMapping__mdt.object-meta.xml
<CustomObject>
    <description>This will store the SERVICE CHARGE TYPE CODE that will be used to send to price only API. This will be fetched with the combination of line of business, service type, market area code, product code.</description>
    <label>serviceChargesCodeMapping</label>
    <pluralLabel>serviceChargesCodeMappings</pluralLabel>
</CustomObject>