force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Line_of_business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_business__c</fullName>
    <description>This will store Line of business. EX : Roll Off or Commercial.</description>
    <label>Line of business</label>
    <length>250</length>
    <type>Text</type>
</CustomField>