force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Market_area_code__c.field-meta.xml
<CustomField>
    <fullName>Market_area_code__c</fullName>
    <description>This will store market area code. EX: Closed or Open.</description>
    <label>Market area code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>