force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Product_code__c.field-meta.xml
<CustomField>
    <fullName>Product_code__c</fullName>
    <description>This will store product code from SFDC.</description>
    <label>Product code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>