force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <description>This will store Product name from SFDC.</description>
    <label>Product name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>