force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Service_charge_code__c.field-meta.xml
<CustomField>
    <fullName>Service_charge_code__c</fullName>
    <description>This will store the code for generated from Acorn. This need to be updated when updated in acorn.</description>
    <label>Service charge code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>