force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Service_charge_name__c.field-meta.xml
<CustomField>
    <fullName>Service_charge_name__c</fullName>
    <description>This store service charge name.</description>
    <label>Service charge name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>