force-app/main/default/objects/serviceChargesCodeMapping__mdt/fields/Service_type__c.field-meta.xml
<CustomField>
    <fullName>Service_type__c</fullName>
    <description>This will store service type. Ex : TEMP or PERM</description>
    <label>Service type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>