force-app/main/default/objects/serviceChargesCodeMapping__mdt/listViews/Service_charge_code_mapping.listView-meta.xml
<ListView>
    <fullName>Service_charge_code_mapping</fullName>
    <columns>DeveloperName</columns>
    <columns>Service_charge_code__c</columns>
    <columns>Service_charge_name__c</columns>
    <columns>Product_code__c</columns>
    <columns>Product_name__c</columns>
    <columns>Service_type__c</columns>
    <columns>Line_of_business__c</columns>
    <columns>Market_area_code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Service charge code mapping</label>
</ListView>